--- a/Task4/Task4.csproj
+++ b/Task4/Task4.csproj
@@ -52,5 +52,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Share\Share.csproj">
+      <Project>{d2b84040-7cf5-4be3-84fd-f903908a9716}</Project>
+      <Name>Share</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
